uniformized capitalization across page

--- a/_data/nmiDist.yaml
+++ b/_data/nmiDist.yaml
@@ -1,8 +1,8 @@
 - name: M. S. Narasimhan
-  research-areas: Algebraic Geometry
+  research-areas: Algebraic geometry
 
 - name: Kalyan B. Sinha
-  research-areas: Operator Theory, Operator Algebras
+  research-areas: Operator theory, operator algebras
   email: kbs_jaya@yahoo@co@in
 
 - name: Vivek S. Borkar
