--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -1,17 +1,17 @@
-- name: Esha Chatterjee Ghosh, Ph. D. (Rhode Island)
+- name: Esha Chatterjee Ghosh, (Ph.D., Rhode Island)
   position: DST Young Scientist
-  research-areas: Nonlinear Difference Equations and Applications
+  research-areas: Nonlinear difference equations and applications
   user-id: esha
 
 
-- name: Surjit Kumar, Ph. D. (IITK)
+- name: Surjit Kumar, (Ph.D., IITK)
   position: Inspire Fellow
-  research-areas: Operator Theory
+  research-areas: Operator theory
   user-id: surjitk15
   # webpage: http://math.iisc.ac.in/~surjitk15
 
 
-- name: Sushma Palimar, Ph. D. (NITK, Surathkal)
-  position: DST Women Scientist
-  research-areas: Algebraic Number Theory
+- name: Sushma Palimar, (Ph.D., NITK, Surathkal)
+  position: DST Woman Scientist
+  research-areas: Algebraic number theory
   user-id : sushma16
