int phd fold, email

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -378,21 +378,25 @@
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
+  email: ramesh19m97@gmail.com
 
 - name: Purba Banerjee
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
+  emai: purbabanerjee01@gmail.com
 
 - name: Abhay Jindal
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
+  email: abhayjindal.999@gmail.com
 
 - name: Babhrubahan Bose
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
+  email: babhrubahanbose@gmail.com
 
 - name : Aakanksha Jain
   user-id: aakankshaj
@@ -403,6 +407,7 @@
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
+  email: arindammandalkne97@gmail.com
 
 - name: Neeladri Maitra
   user-id: neeladrim
