--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -384,7 +384,7 @@
   year-of-joining: 2017
   programme: Integrated PhD
   user-id:
-  emai: purbabanerjee01@gmail.com
+  email: purbabanerjee01@gmail.com
 
 - name: Abhay Jindal
   year-of-joining: 2017
