updated phd information

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,29 +1,26 @@
-- name	:	Asha Kisan Dond, Ph.D.(IITB)
+- name	:	Asha Kisan Dond (Ph.D., IIT Bombay)
   user-id	:	asha16
 
-- name: Qaiser Jahan
+- name: Qaiser Jahan (Ph.D., ISI)
   user-id: qaiser17
 
-- name : Abhash Kumar Jha, Ph.D.
+- name : Abhash Kumar Jha (Ph.D., NISER)
   user-id : abhash17
 
-
-- name	:	Dipendu, Maity, Ph. D. (IITP)
+- name	:	Dipendu Maity (Ph.D., IIT Patna)
   user-id	:	dipendumaity16
 
-
-- name	:	K.Kalaivani
+- name	:	K. Kalaivani
   user-id	:	kalai15
 
-
-- name	:	Kaustubh Manchanda, Ph. D. (JNU)
+- name	:	Kaustubh Manchanda (Ph.D., JNU)
   user-id	:	kaustubh
 
-- name : Chandan Pal
+- name : Chandan Pal (Ph.D., IIT Bombay)
   user-id : chandan14
 
-- name : Debamalya Sain
+- name : Debamalya Sain (Ph.D., Jadavpur)
   user-id: dsain17
 
-- name	:	Tanmay Sarkar, Ph. D. (IIT Madras)
+- name	:	Tanmay Sarkar (Ph.D., IIT Madras)
   user-id	:	tanmay17
