uniformized capitalization across page

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -4,7 +4,7 @@
   user-id: esha
 
 
-- name: Surjit Kumar, (Ph.D., IITK)
+- name: Surjit Kumar, (Ph.D., IIT Kanpur)
   position: Inspire Fellow
   research-areas: Operator theory
   user-id: surjitk15
