--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -43,7 +43,8 @@ aug2017:
     - code: MA 220
       name: Representation Theory
       instructor: Pooja Singla
-
+      webpage: https://sites.google.com/site/reptheory17/
+ 
     - code: MA 312
       name: Commutative Algebra
       instructor: Dilip Patil
