--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -146,6 +146,7 @@
   research-areas: Representation theory
   phd: IMSc
   phone-ext: 2571
+  website: https://sites.google.com/site/poojasingla7/Home
 
 - name: S. Thangavelu
   user-id: veluma
