--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -387,7 +387,7 @@
 - name: Abhay Jindal
   year-of-joining: 2017
   programme: Integrated PhD
-  user-id:
+  user-id: 
   email: abhayjindal.999@gmail.com
 
 - name: Babhrubahan Bose
@@ -428,6 +428,6 @@
 
 
 - name: Kesav S. Krishnan
-  user-id:
+  user-id: kesavk
   year-of-joining: 2017
   programme: PhD
