--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -329,6 +329,21 @@
   volume: "52"
   issn: "0033-569X"
 
+- number: "5"
+  author: "Banerjee, Abhishek"
+  fjournal: "Comptes Rendus Math\\ematique. Acad\\emie des Sciences. Paris"
+  url: "httpdx.doi.org10.1016j.crma.2014.03.016"
+  journal: "C. R. Math. Acad. Sci. Paris"
+  mrnumber: "3194242"
+  pages: "377-382"
+  year: 2014
+  mrreviewer: "Shahram Biglari"
+  title: "Extensions de la filtration de Saito"
+  doi: "10.1016j.crma.2014.03.016"
+  mrclass: "14C15 (14C17)"
+  volume: "352"
+  issn: "1631-073X"
+
 - number: "6"
   author: "Navilarekallu, Tejaswi"
   fjournal: "International Mathematics Research Notices. IMRN"
@@ -2510,6 +2525,20 @@
   volume: "18"
   issn: "2231-5306"
 
+- author: "Banerjee, Abhishek"
+  fjournal: "Journal of Algebra"
+  url: "httpdx.doi.org10.1016j.jalgebra.2014.10.012"
+  journal: "J. Algebra"
+  mrnumber: "3283713"
+  pages: "148-176"
+  year: 2015
+  mrreviewer: "Jon Eivind Vatne"
+  title: "Sch\\emas sur les cat\\egories ab\\eliennes mono\\\\i dales sym\\etriques et faisceaux quasi-coh\\erents"
+  doi: "10.1016j.jalgebra.2014.10.012"
+  mrclass: "14F05 (18D10 18E30)"
+  volume: "423"
+  issn: "0021-8693"
+
 - number: "5"
   author: "Chas, Moira and Gadgil, Siddhartha"
   fjournal: "Algebraic \\ Geometric Topology"
@@ -4436,6 +4465,20 @@
   volume: "75"
   issn: "0970-4140"
 
+- author: "Banerjee, Abhishek"
+  fjournal: "Rendiconti del Seminario Matematico della Universit\\a di Padova"
+  url: "httpdx.doi.org10.4171RSMUP131-8"
+  journal: "Rend. Semin. Mat. Univ. Padova"
+  mrnumber: "3217754"
+  pages: "151-157"
+  year: 2014
+  mrreviewer: "Julien Bichon"
+  title: "On the Lie transformation algebra of monoids in symmetric monoidal categories"
+  doi: "10.4171RSMUP131-8"
+  mrclass: "18D10 (17A36)"
+  volume: "131"
+  issn: "0041-8994"
+
 - number: "1-4"
   author: "Misra, Gadadhar"
   fjournal: "The Mathematics Student"
@@ -4886,6 +4929,20 @@
   mrclass: "01A32 (14-03)"
   volume: "19"
   issn: "0971-1694"
+
+- number: "7"
+  author: "Banerjee, Abhishek"
+  fjournal: "International Journal of Mathematics"
+  url: "httpdx.doi.org10.1142S0129167X17500513"
+  journal: "Internat. J. Math."
+  mrnumber: "3667896"
+  pages: "1750051, 34"
+  year: 2017
+  title: "Noetherian schemes over abelian symmetric monoidal categories"
+  doi: "10.1142S0129167X17500513"
+  mrclass: "14A15 (18D10 19D23)"
+  volume: "28"
+  issn: "0129-167X"
 
 - number: "3"
   author: "Nath, G."
@@ -6268,6 +6325,21 @@
   volume: "161"
   issn: "0021-2172"
 
+- number: "12"
+  author: "Banerjee, Abhishek"
+  fjournal: "Communications in Algebra"
+  url: "httpdx.doi.org10.108000927872.2014.975342"
+  journal: "Comm. Algebra"
+  mrnumber: "3395710"
+  pages: "5362-5371"
+  year: 2015
+  mrreviewer: "Boris Goldfarb"
+  title: "Nearby cycles and the Dold-Kan correspondence"
+  doi: "10.108000927872.2014.975342"
+  mrclass: "14F05 (55N30)"
+  volume: "43"
+  issn: "0092-7872"
+
 - author: "Prasad, Dipendra and Yogananda, C. S."
   series: "Trends Math."
   mrnumber: "1764808"
@@ -6558,6 +6630,20 @@
   volume: "28"
   issn: "0305-0548"
 
+- number: "1"
+  author: "Banerjee, Abhishek"
+  fjournal: "Bulletin of the Belgian Mathematical Society. Simon Stevin"
+  url: "httpprojecteuclid.orgeuclid.bbms1457560860"
+  journal: "Bull. Belg. Math. Soc. Simon Stevin"
+  mrnumber: "3471985"
+  pages: "151-160"
+  year: 2016
+  mrreviewer: "Jos\\e N. Alonso \\Alvarez"
+  title: "Une note sur les d\\erivations localement nilpotentes dans les cat\\egories mono\\\\i dales sym\\etriques"
+  mrclass: "18D10 (13N15)"
+  volume: "23"
+  issn: "1370-1444"
+
 - number: "4"
   author: "Borkar, Vivek S. and Ghosh, Mrinal K."
   fjournal: "Stochastics and Stochastics Reports"
@@ -6587,6 +6673,21 @@
   mrclass: "43A30 (22E46 43A80)"
   volume: "241"
   issn: "0030-8730"
+
+- number: "3"
+  author: "Banerjee, Abhishek"
+  fjournal: "European Journal of Mathematics"
+  url: "httpdx.doi.org10.1007s40879-016-0108-2"
+  journal: "Eur. J. Math."
+  mrnumber: "3536151"
+  pages: "760-797"
+  year: 2016
+  mrreviewer: "Dejun Wu"
+  title: "Realizations of pairs and Oka families in tensor triangulated categories"
+  doi: "10.1007s40879-016-0108-2"
+  mrclass: "13D09 (13A15 18E30)"
+  volume: "2"
+  issn: "2199-675X"
 
 - number: "1"
   author: "Patil, D. P. and Storch, U."
@@ -6914,6 +7015,21 @@
   mrclass: "13N05 (13H99)"
   volume: "27"
   issn: "0092-7872"
+
+- number: "1"
+  author: "Banerjee, Abhishek"
+  fjournal: "Mathematica Scandinavica"
+  url: "httpdx.doi.org10.7146math.scand.a-23294"
+  journal: "Math. Scand."
+  mrnumber: "3475099"
+  pages: "33-42"
+  year: 2016
+  mrreviewer: "Andr\\ea Solotar"
+  title: "Homologie de Hochschild et espaces alg\\ebriques"
+  doi: "10.7146math.scand.a-23294"
+  mrclass: "14F43 (14A20 19D55)"
+  volume: "118"
+  issn: "0025-5521"
 
 - number: "1"
   author: "Guruprasad, K."
@@ -7499,19 +7615,6 @@
   volume: "68"
   issn: "0898-1221"
 
-- number: "1"
-  author: "Singh, S. and Raha, S."
-  fjournal: "Journal of Numerical Mathematics and Stochastics"
-  journal: "J. Numer. Math. Stoch."
-  mrnumber: "2735212"
-  pages: "45-53"
-  year: 2010
-  mrreviewer: "Gon\\A\\S alo Dos Reis"
-  title: "An implicit method for some NSDDEs of It\\^os form"
-  mrclass: "65C30 (60H10)"
-  volume: "2"
-  issn: "2151-2302"
-
 - number: "5"
   author: "Siva Ram Murthy, C. and Rajaraman, V."
   fjournal: "Mathematics and Computers in Simulation"
@@ -7689,6 +7792,21 @@
   mrclass: "57Q99"
   issn: "0161-1712"
 
+- number: "7"
+  author: "Banerjee, Abhishek"
+  fjournal: "Comptes Rendus Math\\ematique. Acad\\emie des Sciences. Paris"
+  url: "httpdx.doi.org10.1016j.crma.2016.05.005"
+  journal: "C. R. Math. Acad. Sci. Paris"
+  mrnumber: "3508561"
+  pages: "665-670"
+  year: 2016
+  mrreviewer: "George Ciprian Modoi"
+  title: "Some remarks on a theorem of Bergman"
+  doi: "10.1016j.crma.2016.05.005"
+  mrclass: "18E15 (03E10 18G05)"
+  volume: "354"
+  issn: "1631-073X"
+
 - number: "1"
   author: "Ghosh, M. K. and McDonald, D. and Sinha, S."
   fjournal: "Journal of Optimization Theory and Applications"
@@ -7743,6 +7861,20 @@
   mrclass: "90C40 (60J10 90B22 93E20)"
   volume: "31"
   issn: "0363-0129"
+
+- number: "1"
+  author: "Banerjee, Abhishek"
+  fjournal: "Annales Math\\ematiques Blaise Pascal"
+  url: "httpambp.cedram.orgitemidAMBP_2014__21_1_1_0"
+  journal: "Ann. Math. Blaise Pascal"
+  mrnumber: "3248219"
+  pages: "1-23"
+  year: 2014
+  mrreviewer: "Annette Huber"
+  title: "Les motifs de Tate et les op\\erateurs de p\\eriodicit\\e de Connes"
+  mrclass: "58B34 (14F42 18D10 19D55 46L80)"
+  volume: "21"
+  issn: "1259-1734"
 
 - author: "Panda, Srikumar and Martha, S. C. and Chakrabarti, A."
   fjournal: "Applied Mathematics and Computation"
@@ -9716,20 +9848,6 @@
   volume: "15"
   issn: "1617-9447"
 
-- number: "6"
-  author: "Singh, Samar and Raha, Soumyendu"
-  fjournal: "International Journal of Computer Mathematics"
-  url: "httpdx.doi.org10.108000207160.2012.657629"
-  journal: "Int. J. Comput. Math."
-  mrnumber: "2903589"
-  pages: "760-779"
-  year: 2012
-  title: "Five-stage Milstein methods for SDEs"
-  doi: "10.108000207160.2012.657629"
-  mrclass: "65C30 (60H10)"
-  volume: "89"
-  issn: "0020-7160"
-
 - number: "1"
   author: "Athreya, Krishna B. and Athreya, Siva R. and Iyer, Srikanth K."
   fjournal: "Bernoulli. Official Journal of the Bernoulli Society for Mathematical Statistics and Probability"
@@ -10267,6 +10385,21 @@
   mrclass: "65N30 (35J86 49M25 65K15)"
   volume: "16"
   issn: "1609-4840"
+
+- number: "9"
+  author: "Banerjee, Abhishek"
+  fjournal: "Journal of Pure and Applied Algebra"
+  url: "httpdx.doi.org10.1016j.jpaa.2016.02.001"
+  journal: "J. Pure Appl. Algebra"
+  mrnumber: "3486289"
+  pages: "3017-3047"
+  year: 2016
+  mrreviewer: "Shawn Xingshan Cui"
+  title: "Schemes over symmetric monoidal categories and torsion theories"
+  doi: "10.1016j.jpaa.2016.02.001"
+  mrclass: "18E40 (14F05 18D10 19D23)"
+  volume: "220"
+  issn: "0022-4049"
 
 - number: "2"
   author: "Radha, R. and Thangavelu, S."
@@ -11569,19 +11702,6 @@
   doi: "10.11429789812707468"
   mrclass: "81S10 (58B34 81-02 81R60 81T13 81T60)"
 
-- number: "4"
-  author: "Singh, Samar"
-  fjournal: "International Journal of Numerical Analysis and Modeling"
-  journal: "Int. J. Numer. Anal. Model."
-  mrnumber: "2926497"
-  pages: "970-981"
-  year: 2012
-  mrreviewer: "Henri Schurz"
-  title: "Split-step forward Milstein method for stochastic differential equations"
-  mrclass: "65C30 (34F05 60H10 60H35)"
-  volume: "9"
-  issn: "1705-5105"
-
 - number: "1"
   author: "Boggarapu, Pradeep and Thangavelu, S."
   fjournal: "Publicacions Matem\\atiques"
@@ -12229,6 +12349,21 @@
   mrclass: "76Rxx (80A20)"
   volume: "84"
   issn: "0369-8203"
+
+- number: "10"
+  author: "Banerjee, Abhishek"
+  fjournal: "Communications in Algebra"
+  url: "httpdx.doi.org10.108000927872.2013.819434"
+  journal: "Comm. Algebra"
+  mrnumber: "3210395"
+  pages: "4548-4558"
+  year: 2014
+  mrreviewer: "Vanessa Miemietz"
+  title: "Localization of monoid objects and Hochschild homology"
+  doi: "10.108000927872.2013.819434"
+  mrclass: "18D10 (16E40)"
+  volume: "42"
+  issn: "0092-7872"
 
 - number: "4"
   author: "B\\eg, O. Anwar and Takhar, H. S. and B\\eg, Tasveer A. and Chamkha, A. J. and Nath, G. and Majeed, Rui"
