Emails abbreviated, correction

--- a/_data/emiscient.yaml
+++ b/_data/emiscient.yaml
@@ -1,13 +1,13 @@
 - name: Ushadevi Narendra Bhosle
   position: Raja Ramanna Fellow
   research-areas: Algebraic geometry, vector bundles, principal bundles
-  email: bhosle@iisc.ac.in
+  email: bhosle[at]iisc.ac.in
   photo: "fac-unb.jpg"
 
 - name: Aloknath Chakrabarti
   position: NASI Honorary Scientist
   research-areas: Boundary-value problems, integral equations, diffraction theory, numerical methods
-  email: alok@iisc.ac.in
+  email: alok[at]iisc.ac.in
   webpage: http://math.iisc.ernet.in/~alok/
   photo: fac-alok2.jpg
 
