--- a/_data/nmiDist.yaml
+++ b/_data/nmiDist.yaml
@@ -3,9 +3,9 @@
 
 - name: Kalyan B. Sinha
   research-areas: Operator theory, operator algebras
-  email: kbs_jaya@yahoo@co@in
+  email: kbs_jaya[at]yahoo[dot]co[dot]in
 
 - name: Vivek S. Borkar
   research-areas: Markov decision processes, controlled diffusions, stochastic algorithms, stochastic games
-  email: borkar@tifr.res.in
+  email: borkar[at]tifr.res.in
   webpage: http://www.tcs.tifr.res.in/~borkar/
