--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -12580,4 +12580,9 @@
   volume: "12"
   issn: "1093-6106"
 
-
+- author: "Gupta, Subhojoy and Wolf, Michael"
+  title: "Meromorphic quadratic differentials with complex residues and spiralling foliations"
+  booktitle: "In the Tradition of Ahlfors--Bers, VII, Contemporary  Mathematics"
+  year: 2017
+  volume: 696
+  pages: 153-181
