update postdoc, inspire ids

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -7,7 +7,7 @@
 - name: Surjit Kumar, (Ph.D., IIT Kanpur)
   position: Inspire Fellow
   research-areas: Operator theory
-  user-id: surjitk15
+  user-id: surjitkumar
   # webpage: http://math.iisc.ac.in/~surjitk15
 
 
