--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,17 +1,17 @@
 - name	:	Asha Kisan Dond (Ph.D., IIT Bombay)
-  user-id	:	asha16
+  user-id	:	ashadond
 
 - name: Qaiser Jahan (Ph.D., ISI)
-  user-id: qaiser17
+  user-id: qaiserjahan
 
 - name : Abhash Kumar Jha (Ph.D., NISER)
   user-id : abhash17
-  
+
 - name	:	K. Kalaivani
   user-id	:	kalai15
 
 - name	:	Dipendu Maity (Ph.D., IIT Patna)
-  user-id	:	dipendumaity16
+  user-id	:	dipendumaity
 
 - name	:	Kaustubh Manchanda (Ph.D., JNU)
   user-id	:	kaustubh
@@ -20,7 +20,7 @@
   user-id : chandan14
 
 - name : Debamalya Sain (Ph.D., Jadavpur)
-  user-id: dsain17
+  user-id: debamalyasain
 
 - name	:	Tanmay Sarkar (Ph.D., IIT Madras)
-  user-id	:	tanmay17
+  user-id	:	tanmaysarkar
