--- a/_data/trainee.yaml
+++ b/_data/trainee.yaml
@@ -1,6 +1,6 @@
 - name: S. Shanmugavel
-  email: library@iisc.ac.in
+  user-id: library@iisc.ac.in
   photo: staf-shan.jpg
 
 - name: K.Surenderan
-  email	:	surender@iisc.ac.in
+  user-id:	surender@iisc.ac.in
