removed "@iisc.ac.in" from trainee user-id

--- a/_data/trainee.yaml
+++ b/_data/trainee.yaml
@@ -1,6 +1,6 @@
 - name: S. Shanmugavel
-  user-id: library@iisc.ac.in
+  user-id: library
   photo: staf-shan.jpg
 
 - name: K. Surenderan
-  user-id:	surender@iisc.ac.in
+  user-id:	surender
