--- a/_data/extrapubs.yaml
+++ b/_data/extrapubs.yaml
@@ -4,3 +4,349 @@
   year: 2017
   volume: 696
   pages: 153-181
+
+- author: "Rangarajan, G."
+  title: "Symplectic integration of nonlinear Hamiltonian systems"
+  journal: "Pramana -- Journal of Physics"
+  year: 1997
+  volume: 48
+  pages: 129
+
+- author: "Rangarajan, G. and Sant, D. A."
+  title: "A climate predictability index and its applications"
+  journal: "Geophysical Research Letters"
+  year: 1997
+  volume: 24
+  pages: 1239
+
+- author: "Rangarajan, G. and Sachidanand, M."
+  title: "Spherical aberration and its correction using Lie algebraic techniques"
+  journal: "Pramana -- Journal of Physics"
+  year: 1997
+  volume: 49
+  pages: 635
+
+- author: "Borkar, V. S, Jain, S and Rangarajan, G."
+  title: "Dynamics of individual specialization and global diversification in   communities"
+  journal: "Complexity"
+  year: 1998
+  volume: 03
+  pages: 50
+
+- author: "Rangarajan, G., Habib, S. and Ryne, R. D."
+  title: "Lyapunov exponents without rescaling and reorthogonalization"
+  journal: "Physical Review Letters"
+  year: 1998
+  volume: 80
+  pages: 3747
+
+- author: "Borkar, V. S., Jain, S. and Rangarajan, G."
+  title: "Generalized replicator dynamics as a model of specialization and   diversity in societies"
+  journal: "Advances in Complex Systems"
+  year: 1998
+  volume: 01
+  pages: 325
+
+- author: “Rangarajan, G., Habib, S. and Ryne, R. D."
+  title: "A new method for computing Lyapunov exponents"
+  booktitle: "Nonlinear Dynamics and Brain Functioning"
+  year: 1999
+
+- author: "Rangarajan, G."
+  title: "Fractals in geophysics"
+  booktitle: “Application of Fractals in Earth Sciences"
+  year: 2000
+
+- author: "Rangarajan, G. and Ding, M."
+  title: "Integrated approach to the assessment of long range correlation in time series data"
+  journal: "Physical Review E"
+  year: 2000
+  volume: 61
+  pages: 4991
+
+- author: "Rangarajan, G. and Sant, D. A."
+  title: "Paleoclimatic data from 74KL and Guliya cores: New insights"
+  journal: "Geophysical Research Letters"
+  year: 2000
+  volume: 27
+  pages: 787
+
+- author: "Rangarajan, G. and Ding, M."
+  title: "First passage time problem for biased continuous-time random walks"
+  journal: "Fractals"
+  year: 2000
+  volume: 08
+  pages: 139
+
+- author: "Rangarajan, G."
+  title: "Applications of Lie algebraic techniques to nonlinear Hamiltoniansystems"
+  booktitle: "Nonlinear Phenomena"
+  year: 2000
+
+- author: "Rangarajan, G. and Sachidanand, M."
+  title: "Invariant metric for nonlinear symplectic maps"
+  journal: "Pramana - Journal of Physics"
+  year: 2002
+  volume: 58
+  pages: 477
+
+- author: "Sant, D. A- and Rangarajan, G."
+  title: "Onset of climate change at last Glacial-Holocene transition: Role of the tropical Pacific"
+  journal: "Current Science"
+  year: 2002
+  volume: 83
+  pages: 1398
+
+- author: "Chen, Y., Rangarajan, G. and Ding,. M."
+  title: "General stability analysis of synchronized dynamics in coupled systems"
+  journal: "Physical Review E"
+  year: 2003
+  volume: 67
+  pages: 026209
+
+- author: "Rangarajan, G. and Ding, M."
+  title: "First passage distributions for long memory processes"
+  journal: "Lecture Notes in Physics"
+  year: 2003
+  volume: 621
+  pages: 167
+
+- author: "Truccolo, W. A., Rangarajan, G., Chen, Y. and Ding, M."
+  title: "Analyzing stability of equilibrium points in neural networks: A general approach"
+  journal: "Neural Networks"
+  year: 2003
+  volume: 16
+  pages: 1453
+
+- author: "Borkar, V. S., Jain, S., and Rangarajan, G."
+  title: "Collective behaviour and diversity in economic communities: Some insights from an evolutionary game"
+  booktitle: "The Application of Econophysics"
+  year: 2003
+
+- author: "Rangarajan, G."
+  title: "Polynomial map factorization of symplectic maps"
+  journal:  "International Journal of Modern Physics C"
+  year: 2003
+  volume: 14
+  pages: 847
+
+- author: "Daya Sagar B. S., Rangarajan, G., and Veneziano, D."
+  title: "Fractals in Geophysics"
+  journal: "Chaos, Solitons and Fractals"
+  year: 2004
+  volume: 19
+  pages: 237
+
+- author: "Rangarajan, G. and Sant, D. A."
+  title: "Fractal dimensional analysis of Indian climatic dynamics"
+  journal: "Chaos, Solitons and Fractals"
+  year: 2004
+  volume: 19
+  pages: 285
+
+- author: "Sant, D. A., Krishnan, K., Rangarajan, G., Basavaiah, N., Pandya, C.,Sharma, M. and Trivedi, Y."
+  title: "Characterization of flood plain and climate change using multi-proxy records"
+  journal: "Journal of Indian Geophysical Union"
+  year: 2004
+  volume: 08
+  pages: 39
+
+- author: “Albo, Z., Di Prisco, G. V., Chen, Y., Rangarajan, G., Truccolo, W., Feng, J., Vertes, R. P. and Ding, M."
+  title: "Is partial coherence a viable technique for identifying generators of neural oscillations?"
+  journal: "Biological Cybernetics"
+  year: 2004
+  volume: 90
+  pages: 318
+
+- author: "Sant, D. A. and Rangarajan, G."
+  title: "Study of Indian climate variability using predictability indices"
+  booktitle: "Modern Applied Mathematics"
+  year: 2005
+  pages: 145
+
+- author: "Borkar, V. S., Jain, S. and Rangarajan, G."
+  title: "Evolutionary mechanisms of organization in complex systems"
+  booktitle: "Mathematical Models for Bioengineering and Probabilistic Systems"
+  year: 2005
+  pages: 323
+
+- author: "Amritkar, R. E. and Rangarajan, G."
+  title: "Spatially synchronous extinction of species under external forcing"
+  journal: "Physical Review Letters"
+  year: 2006
+  volume: 96
+  pages: 258102
+
+- author: "Sant, D. A., Rangarajan, G., Krishnan, K., Basavaiah, N., Pandya, C., Sharma, M. and Trivedi, Y."
+  title: “ Flood plain record of southwest Indian monsoon during the last glacial"
+  journal: "Man and Environment"
+  year: 2006
+  volume: 31
+  pages: 09
+
+- author: "Ganapathy, R., Rangarajan, G. and Sood A. K."
+  title: "Granger causality and cross recurrence plots in rheochaos"
+  journal: "Physical Review E"
+  year: 2007
+  volume: 75
+  pages: 016211
+
+- author: "Nalatore, H., Ding, M. and Rangarajan, G."
+  title: "Mitigating the effects of measurement noise on Granger causality"
+  journal: "Physical Review E"
+  year: 2007
+  volume: 75
+  pages: 031123
+
+- author: "Palaniyandi, P. and Rangarajan, G."
+  title: "Critical lattice size limit for synchronized chaotic state in one- and  two-dimensional diffusively coupled map lattices"
+  journal: "Physical Review E"
+  year: 2007
+  volume: 76
+  pages: 027202
+
+- author: "Dhamala, M., Rangarajan, G. and Ding, M."
+  title: "Estimating Granger causality from Fourier and wavelet transforms of time series data"
+  journal: "Physical Review Letters"
+  year: 2008
+  volume: 100
+  pages: 018701
+
+- author: "Dhamala, M., Rangarajan, G. and Ding, M."
+  title: "Analyzing information flow in brain networks with nonparametric Granger causality"
+  journal: "NeuroImage"
+  year: 2008
+  volume: 41
+  pages: 354
+
+- author: "Nalatore, H., Ding, M. and Rangarajan, G."
+  title: "Denoising neural data with state-space smoothing: Method and application"
+  journal: "Journal of Neuroscience Methods"
+  year: 2009
+  volume: 179
+  pages: 131
+
+- author: "Nalatore, H. and Rangarajan, G."
+  title: "Short-window spectral analysis using AMVAR and multitaper methods: A comparison"
+  journal: "Biological Cybernetics"
+  year: 2009
+  volume: 101
+  pages: 71
+
+- author: "Ghosh, S., Rangarajan, G. and Sinha, S."
+  title: "Stability of synchronization in a multi-cellular system"
+  journal: "European Physics Letters"
+  year: 2010
+  volume: 92
+  pages: 40012
+
+
+- author: "Sukumaran, P., Parvez, I. A., Sant, D. A., Rangarajan, G. and Krishnan, K."
+  title: "Profiling of Late Tertiary - Early Quaternary surface in the lower reaches of Narmada Valley using microtremors"
+  journal: "Journal of Asian Earth Sciences"
+  year: 2011
+  volume: 41
+  pages: 325
+
+- author: "Sukumaran, P., Sant, D. A., Krishnan, K. and Rangarajan, G."
+  title: "High resolution facies record on Late Holocene flood plain sediments from lower reaches of Narmada Valley, Western India"
+  journal: "Journal of the Geological Society of India"
+  year: 2012
+  volume: 79
+  pages: 41
+
+- author: "Resmi, V., Ambika, G., Amritkar, R. E. and Rangarajan, G."
+  title: "Amplitude death in complex networks induced by environment"
+  journal: "Physical Review E"
+  year: 2012
+  volume: 85
+  pages: 046211
+
+- author: "Mahmoudabadi, G.,  Rajagopalan, K., Getzenberg, R. H., Hannenhalli, S., Rangarajan, G. and Kulkarni, P."
+  title: "Intrinsically disordered proteins and conformational noise: Implications in cancer"
+  journal: "Cell Cycle"
+  year: 2013
+  volume: 12
+  pages: 26
+
+- author: "Wen. X., Rangarajan, G. and Ding, M."
+  title: "Is Granger causality a viable technique for analyzing fMRI data?"
+  journal: "PLoS One"
+  year: 2013
+  volume: 08
+  pages: e67428
+
+- author: "Gade, P. and Rangarajan, G."
+  title: "Frustration induced oscillator death on networks"
+  journal: "Chaos"
+  year: 2013
+  volume: 23
+  pages: 033104
+
+- author: "Ghosh, A., Paria, D., Rangarajan, G. and Ghosh, A."
+  title: "Velocity fluctuations in helical propulsion: How small can a propeller be"
+  journal: "Journal of Physical Chemistry Letters"
+  year: 2014
+  volume: 05
+  pages: 62
+
+- author: "Sampath, D., Sabitha, K. R., Hegde, P., Jayakrishnan, H. R., Kutty, B.M., Chattarji, S., Rangarajan, G. and Laxmi, T.R."
+  title: "A study on fear memory retrieval and REM sleep in maternal separation and isolation stressed rats"
+  journal: "Behavioural Brain Research"
+  year: 2014
+  volume: 273
+  pages: 144
+
+- author: "Nalatore. H., Sasikumar, N. and Rangarajan, G."
+  title: "Effect of measurement noise on Granger causality"
+  journal: "Physical Review E"
+  year: 2014
+  volume: 90
+  pages: 062127
+
+- author: "Ding. M and Rangarajan. G"
+  title: "Parametric spectral analysis"
+  booktitle: "Encyclopedia of Computational Neuroscience: Springer Reference"
+  year: 2015
+
+- author: "Ray, A., Sehgal, N., Karunakaran, S., Rangarajan, G. and  Ravindranath, V."
+  title: "MPTP activates ASK1-p38 MAPK signaling pathway through TNF-dependent Trx1 oxidation in Parkinsonism mouse model"
+  journal: "Free Radical Biology & Medicine"
+  year: 2015
+  volume: 87
+  pages: 312
+
+- author: "Rangarajan, N., Fox, Z., Singh, A., Kulkarni, P. and Rangarajan, G."
+  title: "Disorder, Oscillatory Dynamics and State Switching: The Role of c-Myc"
+  journal: "Journal of Theoretical Biology"
+  year: 2015
+  volume: 386
+  pages: 105
+
+- author: "Mooney, S. M., Rajagopalan, K., Rangarajan, G. and Kulkarni, P."
+  title: "Cancer/testis antigens and obligate participation in multiple hallmarks of cancer: an update"
+  journal: "Asian Journal of Andrology"
+  year: 2016
+  volume: 18
+  pages: 711
+
+- author: "Joshi, A. U., Sant, D. A., Parvez, I. A., Rangarajan, G.,  Limaye, M. A., Mukherjee, S., Charola, M. J., Bhatt, M. N. and Mistry, S. P."
+  title: "Sub-surface profiling of granite pluton using microtremor method: southern Aravalli, Gujarat, India"
+  journal: "International Journal of Earth Sciences"
+  year: 2017
+  volume: 106
+  pages: 00
+
+- author: "Sant D. A, Parvez, I. A., Rangarajan, G., Patel, J., Bhatt, M. N. and Salam, T. A. S."
+  title: "Subsurface profiling along Banni Plains and bounding faults, Kachchh, Western India using Microtremors method"
+  journal: "Journal of Asian Earth Sciences"
+  year: 2017
+  volume: 146
+  pages: 326
+
+- author: "Palaniyandi, P. and Rangarajan, G."
+  title: "A mathematical model for storage and recall of images using targeted synchronization of coupled maps"
+  journal: "Scientific Reports"
+  year: 2017
+  volume: 07
+  pages: 8921
