--- a/_data/phds.yaml
+++ b/_data/phds.yaml
@@ -1,3 +1,8 @@
+- name: Nitin Singh
+  title: On Walkup's class of manifolds and tight triangulations
+  advisor: Basudeb Datta, Vijay Natarajan
+  year: 2014
+
 - name: A. C. Jain
   year: 1962
   title: Studies in laminar boundary layer flows with suction or injection
