--- a/_data/trainee.yaml
+++ b/_data/trainee.yaml
@@ -1,6 +1,6 @@
 - name: S. Shanmugavel
-  user-id: library
+  user-id: library.math
   photo: staf-shan.jpg
 
 - name: K. Surenderan
-  user-id:	surender
+  user-id:	surenderank
